2022-06-21  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.8-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.8-alpha06: Kai Elua';git push
	git tag -a 5.0.8-alpha06 -m 'all: add hdn.cdl xmp; ncks Fletcher32.';git push --tags

	* Fix NC_LIB_VER to be NC_LIB_VERSION

	* NCO 5.0.8-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.8-alpha05: Kahakai';git push
	git tag -a 5.0.8-alpha05 -m 'all: add hdn.cdl xmp; ncks Fletcher32.';git push --tags

	* Add extra test cases to hdn.cdl

	* For netCDF < 474 copy input deflate settings and skip nco_flt_def_out()

	* Print Fletcher32 keyword without printing _Filter as well

	* Allow nco_prn.c awareness of filter header

2022-06-19  Charlie Zender  <zender@uci.edu>

	* Never search NULL cmp_sng for "none"

	* Remove OpenMP default(none) on Clang: not helpful, breaks frazil

2022-06-17  Charlie Zender  <zender@uci.edu>

	* Provide nc_def_var_bzip() stub when necessary

	* NCO 5.0.8-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.8-alpha04: June Strawberry Moon';git push
	git tag -a 5.0.8-alpha04 -m 'all: support decompression, netCDF 4.9.0 compat; ncremap, ncclimo: cmp_sng; ncks fix sub-sgs rgr; ';git push --tags

	* Refactor BLOSC_ token definition

	* Tweak CMake searches for netcdf_filter.h NC_HAVE_RENAME_GRP

	* Algorithmatize decision to print DEFLATE, Shuffle separately or use _Filter

	* Add nco_inq_filter_avail_flg()

	* Adopt NC_HAS_QUANTIZE and NC_HAS_ZSTD tokens from netcdf_meta.h

	* Update to newer NC_ pre-processor tokens like NC_HAVE_NEW_CHUNKING_API, NC_HAVE_RENAME_GRP

	* Update release return codes to netCDF 4.9.2

	* Work on compatibility with netCDF 4.9.0, released 20220610

2022-06-16  Charlie Zender  <zender@uci.edu>

	* WTF with OpenMP and sub_sgs_frc_out_thr? Add remaining BLOSC sub-compressors.

	* Solution is to threshold normalization by sub_sgs_frc_out based on input sgs_frc precision
